Fixed spacing issues in the Statusbar

--- a/src/components/statusbar.scss
+++ b/src/components/statusbar.scss
@@ -153,9 +153,9 @@ a {
     #statusbar-container {
       position: fixed;
       top: auto;
-      margin-right: 5px;
+      margin-right: 10px;
       right: 0px;
-      bottom: 5px;
+      bottom: 10px;
     }
   }
 }
